# example-c-project

./: .clang-format  CMakeLists.txt  Doxyfile
.devcontainer/: Containerfile.dev.C  devcontainer.json
app/inc/: example_class.h
app/src/: app.c  example_class.c
app/utils/oom_guard/: oom_guard.c  oom_guard.h
inc/: example_class.h
src/: main  main.c
